tests/fixtures/invalid/pow_none_set_dict.py
# Cannot call pow() with None, Set[int], Dict[str, int]
x = pow(None, {1, 2, 3}, {"a": 1})
